--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
